stablehlo/stablehlo/tests/vhlo_to_version_invalid_target_not_version.mlir
// RUN: stablehlo-opt --vhlo-to-version='target=x.y.z' --verify-diagnostics %s
// expected-error @-2 {{Invalid target version argument 'x.y.z'}}
